# memscan

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
src/: dll.c  test.c  test.cpp
src/memscan/: memscan.c  memscan.h
src/memscan/util/: util.c  util.h
